Added form 3 preprocessing code to notebook and python file

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -839,6 +839,279 @@
    ]
   },
   {
+   "source": [
+    "# Form 3\n",
+    "Create input form 3 where the annotated Amino Acid sequences will be converted a sequence of numbers corresponding to the character that occurres in the annotated sequence.\n",
+    "\n",
+    "NOTE: It does not rely on the reference sequence\n",
+    "\n",
+    "## Start\n",
+    "To start, we will do the same things as we did for form 2 up to the reference. We will be removing the reference column and not using it."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msa_df = pd.read_csv(f'{data_dir}export_msa_69.csv', index_col=0)\n",
+    "msa_df = msa_df[msa_df.index != 'consensus']\n",
+    "msa_df = msa_df[msa_df.index != 'reference']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6  \\\n",
+       "Name                                                                     \n",
+       "1             M          R          Y          I          R          L   \n",
+       "2             M          R          Y          I          R          L   \n",
+       "\n",
+       "     Unnamed: 7 Unnamed: 8 Unnamed: 9 10  ... Unnamed: 278 Unnamed: 279 280  \\\n",
+       "Name                                      ...                                 \n",
+       "1             C          I          I  S  ...            A            A   L   \n",
+       "2             C          I          ?  -  ...            -            -   -   \n",
+       "\n",
+       "     Unnamed: 281 Unnamed: 282 Unnamed: 283 Unnamed: 284 Unnamed: 285  \\\n",
+       "Name                                                                    \n",
+       "1               I            E            H            W            Q   \n",
+       "2               -            -            -            -            -   \n",
+       "\n",
+       "     Unnamed: 286 Unnamed: 287  \n",
+       "Name                            \n",
+       "1               R            X  \n",
+       "2               -            -  \n",
+       "\n",
+       "[2 rows x 287 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 1</th>\n      <th>Unnamed: 2</th>\n      <th>Unnamed: 3</th>\n      <th>Unnamed: 4</th>\n      <th>Unnamed: 5</th>\n      <th>Unnamed: 6</th>\n      <th>Unnamed: 7</th>\n      <th>Unnamed: 8</th>\n      <th>Unnamed: 9</th>\n      <th>10</th>\n      <th>...</th>\n      <th>Unnamed: 278</th>\n      <th>Unnamed: 279</th>\n      <th>280</th>\n      <th>Unnamed: 281</th>\n      <th>Unnamed: 282</th>\n      <th>Unnamed: 283</th>\n      <th>Unnamed: 284</th>\n      <th>Unnamed: 285</th>\n      <th>Unnamed: 286</th>\n      <th>Unnamed: 287</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>M</td>\n      <td>R</td>\n      <td>Y</td>\n      <td>I</td>\n      <td>R</td>\n      <td>L</td>\n      <td>C</td>\n      <td>I</td>\n      <td>I</td>\n      <td>S</td>\n      <td>...</td>\n      <td>A</td>\n      <td>A</td>\n      <td>L</td>\n      <td>I</td>\n      <td>E</td>\n      <td>H</td>\n      <td>W</td>\n      <td>Q</td>\n      <td>R</td>\n      <td>X</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M</td>\n      <td>R</td>\n      <td>Y</td>\n      <td>I</td>\n      <td>R</td>\n      <td>L</td>\n      <td>C</td>\n      <td>I</td>\n      <td>?</td>\n      <td>-</td>\n      <td>...</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 287 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 179
+    }
+   ],
+   "source": [
+    "msa_df.head()"
+   ]
+  },
+  {
+   "source": [
+    "## Create function for values\n",
+    "We need to create a conversion function that will take in an Amino Acid (plus a few extra characters) and return an index of that character."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert(col):\n",
+    "    characters = {\n",
+    "        'A': 0,\n",
+    "        'R': 1, \n",
+    "        'N': 2,\n",
+    "        'D': 3,\n",
+    "        'C': 4,\n",
+    "        'Q': 5,\n",
+    "        'E': 6,\n",
+    "        'G': 7,\n",
+    "        'H': 8,\n",
+    "        'I': 9,\n",
+    "        'L': 10,\n",
+    "        'K': 11,\n",
+    "        'M': 12,\n",
+    "        'F': 13,\n",
+    "        'P': 14,\n",
+    "        'S': 15,\n",
+    "        'T': 16,\n",
+    "        'W': 17,\n",
+    "        'Y': 18,\n",
+    "        'V': 19,\n",
+    "        'B': 20,\n",
+    "        'Z': 21,\n",
+    "        'X': 22,\n",
+    "        '?': 23,\n",
+    "        '-': 24\n",
+    "    }\n",
+    "\n",
+    "    new_col = []\n",
+    "    for c in col:\n",
+    "        tmp = characters.get(c, None)\n",
+    "        if tmp is None:\n",
+    "            raise ValueError(f'Value {c} does not exist in characters dictionary')\n",
+    "\n",
+    "        new_col.append(tmp)\n",
+    "\n",
+    "    return new_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6  \\\n",
+       "Name                                                                     \n",
+       "1             M          R          Y          I          R          L   \n",
+       "2             M          R          Y          I          R          L   \n",
+       "\n",
+       "     Unnamed: 7 Unnamed: 8 Unnamed: 9 10  ... Unnamed: 278 Unnamed: 279 280  \\\n",
+       "Name                                      ...                                 \n",
+       "1             C          I          I  S  ...            A            A   L   \n",
+       "2             C          I          ?  -  ...            -            -   -   \n",
+       "\n",
+       "     Unnamed: 281 Unnamed: 282 Unnamed: 283 Unnamed: 284 Unnamed: 285  \\\n",
+       "Name                                                                    \n",
+       "1               I            E            H            W            Q   \n",
+       "2               -            -            -            -            -   \n",
+       "\n",
+       "     Unnamed: 286 Unnamed: 287  \n",
+       "Name                            \n",
+       "1               R            X  \n",
+       "2               -            -  \n",
+       "\n",
+       "[2 rows x 287 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 1</th>\n      <th>Unnamed: 2</th>\n      <th>Unnamed: 3</th>\n      <th>Unnamed: 4</th>\n      <th>Unnamed: 5</th>\n      <th>Unnamed: 6</th>\n      <th>Unnamed: 7</th>\n      <th>Unnamed: 8</th>\n      <th>Unnamed: 9</th>\n      <th>10</th>\n      <th>...</th>\n      <th>Unnamed: 278</th>\n      <th>Unnamed: 279</th>\n      <th>280</th>\n      <th>Unnamed: 281</th>\n      <th>Unnamed: 282</th>\n      <th>Unnamed: 283</th>\n      <th>Unnamed: 284</th>\n      <th>Unnamed: 285</th>\n      <th>Unnamed: 286</th>\n      <th>Unnamed: 287</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>M</td>\n      <td>R</td>\n      <td>Y</td>\n      <td>I</td>\n      <td>R</td>\n      <td>L</td>\n      <td>C</td>\n      <td>I</td>\n      <td>I</td>\n      <td>S</td>\n      <td>...</td>\n      <td>A</td>\n      <td>A</td>\n      <td>L</td>\n      <td>I</td>\n      <td>E</td>\n      <td>H</td>\n      <td>W</td>\n      <td>Q</td>\n      <td>R</td>\n      <td>X</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M</td>\n      <td>R</td>\n      <td>Y</td>\n      <td>I</td>\n      <td>R</td>\n      <td>L</td>\n      <td>C</td>\n      <td>I</td>\n      <td>?</td>\n      <td>-</td>\n      <td>...</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n      <td>-</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 287 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 181
+    }
+   ],
+   "source": [
+    "# See old head of dataframe\n",
+    "msa_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply function\n",
+    "msa_df = msa_df.apply(convert, axis=1, result_type='broadcast')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6  \\\n",
+       "Name                                                                     \n",
+       "1            12          1         18          9          1         10   \n",
+       "2            12          1         18          9          1         10   \n",
+       "\n",
+       "     Unnamed: 7 Unnamed: 8 Unnamed: 9  10  ... Unnamed: 278 Unnamed: 279 280  \\\n",
+       "Name                                       ...                                 \n",
+       "1             4          9          9  15  ...            0            0  10   \n",
+       "2             4          9         23  24  ...           24           24  24   \n",
+       "\n",
+       "     Unnamed: 281 Unnamed: 282 Unnamed: 283 Unnamed: 284 Unnamed: 285  \\\n",
+       "Name                                                                    \n",
+       "1               9            6            8           17            5   \n",
+       "2              24           24           24           24           24   \n",
+       "\n",
+       "     Unnamed: 286 Unnamed: 287  \n",
+       "Name                            \n",
+       "1               1           22  \n",
+       "2              24           24  \n",
+       "\n",
+       "[2 rows x 287 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 1</th>\n      <th>Unnamed: 2</th>\n      <th>Unnamed: 3</th>\n      <th>Unnamed: 4</th>\n      <th>Unnamed: 5</th>\n      <th>Unnamed: 6</th>\n      <th>Unnamed: 7</th>\n      <th>Unnamed: 8</th>\n      <th>Unnamed: 9</th>\n      <th>10</th>\n      <th>...</th>\n      <th>Unnamed: 278</th>\n      <th>Unnamed: 279</th>\n      <th>280</th>\n      <th>Unnamed: 281</th>\n      <th>Unnamed: 282</th>\n      <th>Unnamed: 283</th>\n      <th>Unnamed: 284</th>\n      <th>Unnamed: 285</th>\n      <th>Unnamed: 286</th>\n      <th>Unnamed: 287</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>12</td>\n      <td>1</td>\n      <td>18</td>\n      <td>9</td>\n      <td>1</td>\n      <td>10</td>\n      <td>4</td>\n      <td>9</td>\n      <td>9</td>\n      <td>15</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>10</td>\n      <td>9</td>\n      <td>6</td>\n      <td>8</td>\n      <td>17</td>\n      <td>5</td>\n      <td>1</td>\n      <td>22</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>12</td>\n      <td>1</td>\n      <td>18</td>\n      <td>9</td>\n      <td>1</td>\n      <td>10</td>\n      <td>4</td>\n      <td>9</td>\n      <td>23</td>\n      <td>24</td>\n      <td>...</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 287 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 190
+    }
+   ],
+   "source": [
+    "msa_df.head()"
+   ]
+  },
+  {
+   "source": [
+    "## To CSV\n",
+    "Lastly, we want to export as CSV without the indecies. We do not need the pandas pre-made indicies, so we can remove them from the CSV file. Since this file is just testing, it will be saved to the current folder."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msa_df.to_csv('form_3.csv')"
+   ]
+  },
+  {
+   "source": [
+    "Test to see if the file can be loaded, and what it will look like if it is."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Name  Unnamed: 1  Unnamed: 2  Unnamed: 3  Unnamed: 4  Unnamed: 5  \\\n",
+       "0     1          12           1          18           9           1   \n",
+       "1     2          12           1          18           9           1   \n",
+       "\n",
+       "   Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  ...  Unnamed: 278  \\\n",
+       "0          10           4           9           9  ...             0   \n",
+       "1          10           4           9          23  ...            24   \n",
+       "\n",
+       "   Unnamed: 279  280  Unnamed: 281  Unnamed: 282  Unnamed: 283  Unnamed: 284  \\\n",
+       "0             0   10             9             6             8            17   \n",
+       "1            24   24            24            24            24            24   \n",
+       "\n",
+       "   Unnamed: 285  Unnamed: 286  Unnamed: 287  \n",
+       "0             5             1            22  \n",
+       "1            24            24            24  \n",
+       "\n",
+       "[2 rows x 288 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Unnamed: 1</th>\n      <th>Unnamed: 2</th>\n      <th>Unnamed: 3</th>\n      <th>Unnamed: 4</th>\n      <th>Unnamed: 5</th>\n      <th>Unnamed: 6</th>\n      <th>Unnamed: 7</th>\n      <th>Unnamed: 8</th>\n      <th>Unnamed: 9</th>\n      <th>...</th>\n      <th>Unnamed: 278</th>\n      <th>Unnamed: 279</th>\n      <th>280</th>\n      <th>Unnamed: 281</th>\n      <th>Unnamed: 282</th>\n      <th>Unnamed: 283</th>\n      <th>Unnamed: 284</th>\n      <th>Unnamed: 285</th>\n      <th>Unnamed: 286</th>\n      <th>Unnamed: 287</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>12</td>\n      <td>1</td>\n      <td>18</td>\n      <td>9</td>\n      <td>1</td>\n      <td>10</td>\n      <td>4</td>\n      <td>9</td>\n      <td>9</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>10</td>\n      <td>9</td>\n      <td>6</td>\n      <td>8</td>\n      <td>17</td>\n      <td>5</td>\n      <td>1</td>\n      <td>22</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>12</td>\n      <td>1</td>\n      <td>18</td>\n      <td>9</td>\n      <td>1</td>\n      <td>10</td>\n      <td>4</td>\n      <td>9</td>\n      <td>23</td>\n      <td>...</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n      <td>24</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 288 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 194
+    }
+   ],
+   "source": [
+    "pd.read_csv('form_3.csv').head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
