Starting work on XGBoost algorithm and fixing MIC encoding in label processing code

--- a/notebooks/label_processing.ipynb
+++ b/notebooks/label_processing.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/test/\""
+    "data_dir = \"../data/test/\"\n",
+    "possible_mics = [0.001, 0.003, 0.007, 0.015, 0.03, 0.06, 0.12, 0.25, 0.5, 1., 2., 4., 8., 16., 32., 64., 128.,\n",
+    "                 256., 512., 1024.]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +100,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Antibiotic_1</th>\n      <th>Antibiotic_2</th>\n      <th>Antibiotic_3</th>\n      <th>Antibiotic_4</th>\n      <th>Antibiotic_5</th>\n      <th>Antibiotic_6</th>\n      <th>Antibiotic_7</th>\n      <th>Antibiotic_8</th>\n      <th>Antibiotic_9</th>\n      <th>Antibiotic_10</th>\n      <th>Antibiotic_11</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>&gt;16.00</td>\n      <td>NaN</td>\n      <td>0.06</td>\n      <td>0.25</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>&lt;=0.06</td>\n      <td>0.12</td>\n      <td>&gt;64.00</td>\n      <td>4.0</td>\n      <td>4.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>&gt;16.00</td>\n      <td>NaN</td>\n      <td>0.50</td>\n      <td>NaN</td>\n      <td>8.0</td>\n      <td>&gt;32.00</td>\n      <td>&gt;4.00</td>\n      <td>0.25</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>&gt;16.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 6
     }
    ],
    "source": [
@@ -117,31 +119,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drop_symbols(col):\n",
+    "def encode_mics(col):\n",
     "    def try_extract(x):\n",
-    "        if isinstance(x, int) or isinstance(x, float):\n",
-    "            return x\n",
+    "        if isinstance(x, str):\n",
+    "            return possible_mics.index(float(x.lstrip('<=').lstrip('>')))\n",
+    "        elif np.isnan(x):\n",
+    "            return -1\n",
     "        else:\n",
-    "            return x.lstrip('<=').lstrip('>')\n",
-    "    return pd.Series([try_extract(x) for x in col], dtype=float)"
+    "            return possible_mics.index(float(x))\n",
+    "    return pd.Series([try_extract(x) for x in col], dtype=int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_df = labels_df.apply(drop_symbols, axis=1, result_type='broadcast')"
+    "labels_df = labels_df.apply(encode_mics, axis=1, result_type='broadcast')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -150,23 +154,23 @@
       "text/plain": [
        "     Antibiotic_1 Antibiotic_2 Antibiotic_3 Antibiotic_4 Antibiotic_5  \\\n",
        "Name                                                                    \n",
-       "1            16.0          NaN         0.06         0.25          1.0   \n",
-       "2            16.0          NaN          0.5          NaN          8.0   \n",
+       "1              13           -1            5            7            9   \n",
+       "2              13           -1            8           -1           12   \n",
        "\n",
        "     Antibiotic_6 Antibiotic_7 Antibiotic_8 Antibiotic_9 Antibiotic_10  \\\n",
        "Name                                                                     \n",
-       "1             NaN         0.06         0.12         64.0           4.0   \n",
-       "2            32.0          4.0         0.25          NaN           NaN   \n",
+       "1              -1            5            6           15            11   \n",
+       "2              14           11            7           -1            -1   \n",
        "\n",
        "     Antibiotic_11  \n",
        "Name                \n",
-       "1              4.0  \n",
-       "2             16.0  "
+       "1               11  \n",
+       "2               13  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Antibiotic_1</th>\n      <th>Antibiotic_2</th>\n      <th>Antibiotic_3</th>\n      <th>Antibiotic_4</th>\n      <th>Antibiotic_5</th>\n      <th>Antibiotic_6</th>\n      <th>Antibiotic_7</th>\n      <th>Antibiotic_8</th>\n      <th>Antibiotic_9</th>\n      <th>Antibiotic_10</th>\n      <th>Antibiotic_11</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>16.0</td>\n      <td>NaN</td>\n      <td>0.06</td>\n      <td>0.25</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>0.06</td>\n      <td>0.12</td>\n      <td>64.0</td>\n      <td>4.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>16.0</td>\n      <td>NaN</td>\n      <td>0.5</td>\n      <td>NaN</td>\n      <td>8.0</td>\n      <td>32.0</td>\n      <td>4.0</td>\n      <td>0.25</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>16.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Antibiotic_1</th>\n      <th>Antibiotic_2</th>\n      <th>Antibiotic_3</th>\n      <th>Antibiotic_4</th>\n      <th>Antibiotic_5</th>\n      <th>Antibiotic_6</th>\n      <th>Antibiotic_7</th>\n      <th>Antibiotic_8</th>\n      <th>Antibiotic_9</th>\n      <th>Antibiotic_10</th>\n      <th>Antibiotic_11</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>13</td>\n      <td>-1</td>\n      <td>5</td>\n      <td>7</td>\n      <td>9</td>\n      <td>-1</td>\n      <td>5</td>\n      <td>6</td>\n      <td>15</td>\n      <td>11</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>13</td>\n      <td>-1</td>\n      <td>8</td>\n      <td>-1</td>\n      <td>12</td>\n      <td>14</td>\n      <td>11</td>\n      <td>7</td>\n      <td>-1</td>\n      <td>-1</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 21
     }
    ],
    "source": [
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -200,21 +204,21 @@
      "data": {
       "text/plain": [
        "   Name  Antibiotic_1  Antibiotic_2  Antibiotic_3  Antibiotic_4  Antibiotic_5  \\\n",
-       "0     1          16.0           NaN          0.06          0.25           1.0   \n",
-       "1     2          16.0           NaN          0.50           NaN           8.0   \n",
+       "0     1            13            -1             5             7             9   \n",
+       "1     2            13            -1             8            -1            12   \n",
        "\n",
        "   Antibiotic_6  Antibiotic_7  Antibiotic_8  Antibiotic_9  Antibiotic_10  \\\n",
-       "0           NaN          0.06          0.12          64.0            4.0   \n",
-       "1          32.0          4.00          0.25           NaN            NaN   \n",
+       "0            -1             5             6            15             11   \n",
+       "1            14            11             7            -1             -1   \n",
        "\n",
        "   Antibiotic_11  \n",
-       "0            4.0  \n",
-       "1           16.0  "
+       "0             11  \n",
+       "1             13  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Antibiotic_1</th>\n      <th>Antibiotic_2</th>\n      <th>Antibiotic_3</th>\n      <th>Antibiotic_4</th>\n      <th>Antibiotic_5</th>\n      <th>Antibiotic_6</th>\n      <th>Antibiotic_7</th>\n      <th>Antibiotic_8</th>\n      <th>Antibiotic_9</th>\n      <th>Antibiotic_10</th>\n      <th>Antibiotic_11</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>16.0</td>\n      <td>NaN</td>\n      <td>0.06</td>\n      <td>0.25</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>0.06</td>\n      <td>0.12</td>\n      <td>64.0</td>\n      <td>4.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>16.0</td>\n      <td>NaN</td>\n      <td>0.50</td>\n      <td>NaN</td>\n      <td>8.0</td>\n      <td>32.0</td>\n      <td>4.00</td>\n      <td>0.25</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>16.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Antibiotic_1</th>\n      <th>Antibiotic_2</th>\n      <th>Antibiotic_3</th>\n      <th>Antibiotic_4</th>\n      <th>Antibiotic_5</th>\n      <th>Antibiotic_6</th>\n      <th>Antibiotic_7</th>\n      <th>Antibiotic_8</th>\n      <th>Antibiotic_9</th>\n      <th>Antibiotic_10</th>\n      <th>Antibiotic_11</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>13</td>\n      <td>-1</td>\n      <td>5</td>\n      <td>7</td>\n      <td>9</td>\n      <td>-1</td>\n      <td>5</td>\n      <td>6</td>\n      <td>15</td>\n      <td>11</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>13</td>\n      <td>-1</td>\n      <td>8</td>\n      <td>-1</td>\n      <td>12</td>\n      <td>14</td>\n      <td>11</td>\n      <td>7</td>\n      <td>-1</td>\n      <td>-1</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 23
     }
    ],
    "source": [
